# ATEAM

./: .gitignore  CITATION.cff  Chain.py  LICENSE  Lattice.py  Makefile  Models.py  README.md  Simplex.py  Structures.py  accepts.py  docs.sh  helper.py  pyproject.toml  requirements.txt  schedules.py  setup.py  setup.sh  simulation.py
ateam/: Chain.py  __init__.py  index.md
ateam/arithmetic/: __init__.py  coordinates.pyx  cubicalComplex.pyx  fastiteration.pyx  homology.pyx
ateam/models/: Glauber.py  InvadedCluster.py  Model.py  SwendsenWang.py  __init__.py
ateam/structures/: Cell.py  __init__.py
docs/: Chain.html  Tape.html  index.html
docs/arithmetic/: fastiteration.html  homology.html  index.html
docs/models/: index.html
docs/stats/: Wilson.html  accepts.html  defaults.html  distributions.html  energies.html  index.html  schedules.html
docs/structures/: Components.html  GraphLattice.html  index.html
docs/templates/: logo.mako
docs/utils/: index.html
docs/viz/: index.html  lattice.html
potts/: Chain.py  Tape.py  __init__.py
potts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
potts/arithmetic/: __init__.py  homology.pyx  (+8 more)
test/: Profile.prof  clean.sh  ic.py  ic.txt  local  local.json  profile.models.InvadedCluster.py  profile.py  profile.sh  profile.slurm  sample-graph.py  sample.py  simulation.py  submit.sh  test-graph-lattice.py  test-image-features.py  test-profile.py  test-profile.sh  test.models.Glauber.py  test.models.HomologicalPercolation.py  test.models.SwendsenWang.py  test.phat-bug.py  test.structures.Lattice.py  test.viz.lattice.py
(+31 files in other folders)
