
[build-system]
requires = ["Cython", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ateam"
version = "0.0.1"
description = "Algebraic Topology-Enabled Algorithms for Mechanics"
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "numpy",
    "galois",
    "matplotlib",
    "pandas",
    "scipy",
    "rustworkx",
    "Cython",
    "jsonlines",
    "pybind11",
    "phat"
]

[tool.setuptools]
py-modules = ["ateam"]
